#-------------------------------------------------------------------------------------
#
# TinyXCP
#
#-------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(xcp-common)
ADD_SUBDIRECTORY(xcp-message)
ADD_SUBDIRECTORY(xcp-message-codec)
ADD_SUBDIRECTORY(xcp-websocket)
ADD_SUBDIRECTORY(xcp-webcmd)

ADD_SUBDIRECTORY(sample_generic_loading_dynamic)
#ADD_SUBDIRECTORY(sample_generic_loading_static)
#ADD_SUBDIRECTORY(sample_generic_local_loading_dynamic)
#ADD_SUBDIRECTORY(sample_generic_local_loading_static)
